--- a/templates/dial.html
+++ b/templates/dial.html
@@ -6,8 +6,11 @@
     <body>
 		<form method = 'POST' action="/">
 			
-			 Enter phone number to play phone buzz game. <br>
+			 Enter phone number to play the phone buzz game! <br>
+			Phone number
 			<input name="tel" required> <br>
+			 Time delay
+			<input type="number" name= "delay"> seconds
 			<p font-color ="red" >{{error_msg}} </p>
 			<input type="submit"/>
 		</form>
